// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withPostMessageStorage should clear storage 1`] = `"{}"`;

exports[`withPostMessageStorage should clear storage 2`] = `
Array [
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "0",
      "result": undefined,
    },
  },
]
`;

exports[`withPostMessageStorage should get key of storage 1`] = `
Array [
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "0",
      "result": "b",
    },
  },
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "0",
      "result": null,
    },
  },
]
`;

exports[`withPostMessageStorage should get length of storage 1`] = `
Array [
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "0",
      "result": 3,
    },
  },
]
`;

exports[`withPostMessageStorage should handle handle errors 1`] = `
Array [
  Object {
    "key": "postMessageStorage.localStorage.error",
    "value": Object {
      "error": "error",
      "id": "0",
    },
  },
]
`;

exports[`withPostMessageStorage should handle unknown method 1`] = `
Array [
  Object {
    "key": "postMessageStorage.localStorage.error",
    "value": Object {
      "error": "Unknown method unknown",
      "id": "0",
    },
  },
]
`;

exports[`withPostMessageStorage should set, get and remove item 1`] = `"{\\"coral:key\\":\\"test\\"}"`;

exports[`withPostMessageStorage should set, get and remove item 2`] = `"{}"`;

exports[`withPostMessageStorage should set, get and remove item 3`] = `
Array [
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "0",
      "result": undefined,
    },
  },
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "1",
      "result": "test",
    },
  },
  Object {
    "key": "postMessageStorage.localStorage.response",
    "value": Object {
      "id": "2",
      "result": undefined,
    },
  },
]
`;
